--- a/src/app/project-manager-dashboard/project-manager-dashboard.component.html
+++ b/src/app/project-manager-dashboard/project-manager-dashboard.component.html
@@ -15,16 +15,8 @@
       <div class="grid">
         <md-card *ngFor="let dealership of dealerships" class="dealership-item has-overlay">
           <h3>{{ dealership.dealership.name }}</h3>
-          <div class="info">
-            <span>{{ getPrimaryUser(dealership.users).name }}</span>
-          </div>
-          <div class="info">
-            <i class="material-icons">phone</i>
-            <a href="tel: {{ getPrimaryUser(dealership.users).phone | phone_format:false }}">{{ getPrimaryUser(dealership.users).phone | phone_format:true }}</a>
-          </div>
-          <div class="info">
-            <i class="material-icons">email</i>
-            <a href="mailto: {{ getPrimaryUser(dealership.users).email }}">{{ getPrimaryUser(dealership.users).email }}</a>
+          <div class="products">
+            <i *ngFor="let product of dealership.products" mdTooltip="{{ product.product.name }}" mdTooltipPosition="below" class="material-icons" style="color: #2196F3">{{ getIcon(product.product.name) }}</i>
           </div>
           <user-slider [(users)]="dealership.users"></user-slider>
         </md-card>
